# coc-resources

./: Cargo.toml  README.md  ROADMAP.md  SPECIFICATION.md
src/: lib.rs  main.rs
src/parser/: detector.rs  extractor.rs  mod.rs  model.rs  tests.rs  toml.rs
test/: test_api_config.toml
