[package]
name = "coc-resources"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
nom = "7"
toml_edit = "0.20"
rusqlite = { version = "0.29", features = ["bundled"] }
tonic = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
bytecount = "0.6"

[[bin]]
name = "coc-resources"
path = "src/main.rs"
